--- a/app/src/main/res/layout/activity_chat_contact_properties.xml
+++ b/app/src/main/res/layout/activity_chat_contact_properties.xml
@@ -18,7 +18,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:expandedTitleMarginBottom="24dp"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -46,6 +45,12 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="112dp"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/gradient_shape" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
                         android:layout_alignParentBottom="true"
                         android:background="@drawable/actionbar_gradient_dark" />
                 </RelativeLayout>
