--- a/app/src/main/res/layout/content_chat_contact_properties_activity.xml
+++ b/app/src/main/res/layout/content_chat_contact_properties_activity.xml
@@ -15,23 +15,25 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <!-- AVAILABLE OFFLINE LAYOUT -->
+        <!-- NOTIFICATIONS LAYOUT -->
 
         <LinearLayout
-            android:id="@+id/available_offline_layout"
+            android:id="@+id/chat_contact_properties_notifications_layout"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/white"
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/chat_contact_properties_available_offline_text"
+                android:id="@+id/chat_contact_properties_notifications_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
+                android:textColor="@color/name_my_account"
                 android:layout_weight="5"
-                android:text="@string/file_properties_available_offline"
-                android:textStyle="bold" />
+                android:text="@string/title_properties_chat_contact_notifications"
+                android:textSize="16dp" />
 
             <Switch
                 android:id="@+id/chat_contact_properties_switch"
@@ -47,326 +49,148 @@
             android:layout_height="1dp"
             android:background="@color/separator_grey" />
 
-        <!-- SHARED LAYOUT -->
+        <!-- CHAT MESSAGE SOUND LAYOUT -->
 
         <RelativeLayout
-            android:id="@+id/chat_contact_properties_shared_layout"
+            android:id="@+id/chat_contact_properties_messages_sound_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="72dp"
+            android:layout_gravity="left|center_vertical"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/chat_contact_properties_shared_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="left"
-                android:src="@drawable/ic_shared_with_grey" />
+                android:layout_centerVertical="true">
 
-            <TextView
-                android:id="@+id/chat_contact_properties_shared_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/chat_contact_properties_shared_image"
-                android:text="@string/file_properties_shared_folder_select_contact"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/chat_contact_properties_messages_sound_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_properties_chat_contact_message_sound"
+                    android:textSize="16dp"
+                    android:textColor="@color/name_my_account"/>
 
-            <TextView
-                android:id="@+id/chat_contact_properties_shared_info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:textColor="@color/accentColor"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/chat_contact_properties_messages_sound"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/chat_contact_properties_messages_sound_label"
+                    android:text="Probando"
+                    android:textColor="@color/accentColor"
+                    android:textSize="14dp" />
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
         <View
-            android:id="@+id/divider_shared_layout"
+            android:id="@+id/divider_message_sound_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/separator_grey" />
 
-        <!-- MAIL LAYOUT -->
+        <!-- CALL RINGTONE LAYOUT -->
 
         <RelativeLayout
-            android:id="@+id/chat_contact_properties_email_layout"
+            android:id="@+id/chat_contact_properties_ringtone_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="left" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_email_icon"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_email_grey" />
+            android:layout_height="72dp"
+            android:layout_gravity="left|center_vertical"
+            android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/chat_contact_properties_email_text_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/chat_contact_properties_email_icon" >
+                android:layout_centerVertical="true">
 
                 <TextView
-                    android:id="@+id/chat_contact_properties_email_label"
+                    android:id="@+id/chat_contact_properties_ringtone_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/email_text"
-                    android:textStyle="bold" />
+                    android:text="@string/title_properties_chat_contact_call_sound"
+                    android:textSize="16dp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
-                    android:id="@+id/chat_contact_properties_email"
+                    android:id="@+id/chat_contact_properties_ringtone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_email_label"
-                    android:textColor="@color/grey_info_menu" />
+                    android:layout_below="@+id/chat_contact_properties_ringtone_label"
+                    android:text="Probando"
+                    android:textColor="@color/accentColor"
+                    android:textSize="14dp" />
+
             </RelativeLayout>
+
         </RelativeLayout>
 
         <View
+            android:id="@+id/divider_ringtone_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/separator_grey" />
 
-        <!-- PERMISSIONS LAYOUT -->
+        <!-- SHARE CONTACT LAYOUT -->
 
         <RelativeLayout
-            android:id="@+id/chat_contact_properties_permissions_layout"
+            android:id="@+id/chat_contact_properties_share_contact_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_permissions_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_permissions_grey"
-                android:visibility="invisible" />
-
-            <RelativeLayout
-                android:id="@+id/chat_contact_properties_child_permissions_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/chat_contact_properties_permissions_image" >
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_permission_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_shared_folder_permissions"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_permission_info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_permission_label"
-                    android:textColor="@color/grey_info_menu" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <!-- OWNER LAYOUT -->
-
-        <RelativeLayout
-            android:id="@+id/chat_contact_properties_owner_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left">
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_owner_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
+            android:layout_height="72dp"
+            android:layout_gravity="left|center_vertical"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/chat_contact_properties_owner_image" >
+                android:layout_centerVertical="true">
 
                 <TextView
-                    android:id="@+id/chat_contact_properties_owner_label"
+                    android:id="@+id/chat_contact_properties_share_contact_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/file_properties_owner"
-                    android:textStyle="bold" />
+                    android:text="@string/title_properties_chat_share_contact"
+                    android:textSize="16dp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
-                    android:id="@+id/chat_contact_properties_owner_info"
+                    android:id="@+id/chat_contact_properties_share_contact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_owner_label"
-                    android:textColor="@color/grey_info_menu" />
+                    android:layout_below="@+id/chat_contact_properties_share_contact_label"
+                    android:text="Probando"
+                    android:textColor="@color/accentColor"
+                    android:textSize="14dp" />
+
             </RelativeLayout>
+
         </RelativeLayout>
 
-        <!-- SIZE LAYOUT -->
+        <View
+            android:id="@+id/divider_share_contact_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/separator_grey" />
+
+        <!-- CLEAR LAYOUT -->
 
         <RelativeLayout
-            android:id="@+id/chat_contact_properties_size_layout"
+            android:id="@+id/chat_contact_properties_clear_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_size_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/chat_contact_properties_size_image" >
+            android:layout_height="48dp"
+            android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/chat_contact_properties_info_menu_size"
+                    android:id="@+id/chat_contact_properties_clear"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/file_properties_info_size_file"
-                    android:textStyle="bold" />
+                    android:layout_centerVertical="true"
+                    android:text="@string/title_properties_chat_clear_chat"
+                    android:textSize="16dp"
+                    android:textColor="@color/name_my_account"/>
 
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_data_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_info_menu_size"
-                    android:textColor="@color/grey_info_menu" />
-            </RelativeLayout>
         </RelativeLayout>
 
-        <!-- CONTENT LAYOUT -->
-
-        <RelativeLayout
-            android:id="@+id/chat_contact_properties_content_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_content_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/chat_contact_properties_content_image"
-                android:gravity="left" >
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_menu_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_info_content"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_data_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_info_menu_content"
-                    android:textColor="@color/grey_info_menu" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <!-- ADDED LAYOUT -->
-
-        <RelativeLayout
-            android:id="@+id/chat_contact_properties_added_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_added_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/chat_contact_properties_added_image"
-                android:gravity="left" >
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_menu_added"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_info_added"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_data_added"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_info_menu_added"
-                    android:textColor="@color/grey_info_menu" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <!-- MODIFIED LAYOUT -->
-
-        <RelativeLayout
-            android:id="@+id/chat_contact_properties_modified_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/chat_contact_properties_modified_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/chat_contact_properties_modified_image"
-                android:gravity="left" >
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_menu_modified"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_info_modified"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/chat_contact_properties_info_data_modified"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/chat_contact_properties_info_menu_modified"
-                    android:textColor="@color/grey_info_menu" />
-            </RelativeLayout>
-        </RelativeLayout>
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
