--- a/app/src/main/res/layout/activity_file_provider.xml
+++ b/app/src/main/res/layout/activity_file_provider.xml
@@ -1,116 +1,68 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".FileProviderActivityLollipop" >
 
-    <RelativeLayout
-        android:id="@+id/file_provider_toolbar"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_provider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/standard_margin" >
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        tools:context=".FileProviderActivityLollipop" />
 
-        <LinearLayout
-            android:id="@+id/file_provider_button_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal" >
+    <LinearLayout
+        android:id="@+id/options_provider_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:gravity="right|center_vertical"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="horizontal" >
 
-<!--             <ImageButton
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_refresh"
-                android:onClick="onRefreshClick"
-                android:src="@drawable/ic_menu_navigation_refresh_dark" />
--->
-            <ImageButton
-                android:id="@+id/file_provider_new_folder"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/menu_new_folder"
-                android:src="@drawable/ic_create_folder" />
-        </LinearLayout>
-
-        <ImageView 
-            android:id="@+id/file_provider_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/ic_action_navigation_previous_item"/>
-        
         <TextView
-            android:id="@+id/file_provider_window_title"
+            android:id="@+id/cancel_text"
+            android:fontFamily="sans-serif-medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/file_provider_back"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textAppearance="@android:style/TextAppearance.Large" />        
-        
-    </RelativeLayout>
+            android:textColor="@color/accentColor"
+            android:gravity="center_vertical|center_horizontal"
+            android:textSize="14sp"/>
+    </LinearLayout>
 
     <View
-        android:id="@+id/file_provider_divider_top"
-        android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:layout_below="@id/file_provider_toolbar"
-        android:background="@color/mega" />
+        android:id="@+id/separator"
+        android:background="@color/separator_grey"
+        android:layout_width = "fill_parent"
+        android:layout_height="1dip"
+        android:layout_above="@id/options_provider_layout"/>
 
-    <!--  
-    <Button
-        android:id="@+id/file_provider_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center" />
-    
-    
-  <Button
-       	android:id="@+id/file_provider_button"
-       	android:layout_gravity="center"
-       	android:layout_height="55dp"
-       	android:layout_width="fill_parent"
-       	android:layout_alignParentBottom="true"
-       	android:background="@drawable/btn_default_holo_light_without_corners"
-       	android:textColor="@color/white">
-    </Button>
- -->
-<TabHost
-        android:id="@+id/tabhost_provider"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/file_provider_divider_top">
-
-        <LinearLayout
-            android:orientation="vertical"
+    <LinearLayout
+            android:id="@+id/tabhost_provider"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/separator"
+            android:layout_below="@id/toolbar_provider"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:orientation="vertical" >
 
-           <TabWidget
-            android:id="@android:id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-       	   </TabWidget>
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="0"/>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/sliding_tabs_provider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/mega"
+                style="@style/MyCustomTabLayout"/>
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/provider_tabs_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
         </LinearLayout>
-    </TabHost>
 
 </RelativeLayout>
