--- a/app/src/main/res/layout/fragment_contact_properties.xml
+++ b/app/src/main/res/layout/fragment_contact_properties.xml
@@ -107,14 +107,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/email_text"
-                        android:textStyle="bold" />
+                        android:textColor="@color/name_my_account"
+                        android:textSize="16sp" />
 
                     <TextView
                         android:id="@+id/contact_properties_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/contact_properties_email_label"
-                        android:textColor="@color/grey_info_menu" />
+                        android:textColor="@color/mail_my_account"
+                        android:textSize="16sp"/>
                 </RelativeLayout>
             </RelativeLayout>
 
@@ -157,7 +159,8 @@
                     android:layout_gravity="left|center_vertical"
                     android:layout_toRightOf="@id/contact_properties_shared_folder_icon"
                     android:text="@string/section_shared_items"
-                    android:textStyle="bold" />
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/contact_properties_shared_folders_button"
