--- a/app/src/main/res/layout/item_contact_grid.xml
+++ b/app/src/main/res/layout/item_contact_grid.xml
@@ -1,76 +1,77 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/contact_grid_item_complete_layout"
-	android:layout_width="fill_parent"
+	android:layout_width="172dp"
 	android:layout_height="wrap_content"
-	android:background="@color/new_background_fragment">
-    
-    <RelativeLayout 
-        android:layout_width="172dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/contact_grid_item_layout"
-        android:background="@drawable/background_item_grid"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:descendantFocusability="blocksDescendants" >
-        
-        <RelativeLayout
-			android:id="@+id/contact_grid_relative_layout_avatar"
-			android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-			android:background="@color/new_background_fragment">
-		
-		    <ImageView 
-			    android:id="@+id/contact_grid_thumbnail"
-			    android:layout_width="172dp"
-			    android:layout_height="172dp"
-				android:layout_centerInParent="true"
-				android:gravity="center_horizontal|center_vertical"/>
-		    
-		    <TextView
-		        android:id="@+id/contact_grid_initial_letter"
-		        android:layout_width="157dp"
-		        android:layout_height="140dp" 
-			    android:gravity="center_horizontal|center_vertical" />
-	    
-	    </RelativeLayout>
+	android:id="@+id/contact_grid_item_layout"
+	android:background="@drawable/background_item_grid"
+	android:layout_alignParentTop="true"
+	android:layout_alignParentLeft="true"
+	android:layout_margin="3dp"
+	android:descendantFocusability="blocksDescendants" >
 
-        <ImageButton
-	        android:id="@+id/contact_grid_three_dots"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:src="@drawable/ic_dots_vertical_grey"
-	        android:layout_below="@id/contact_grid_relative_layout_avatar"
+	<RelativeLayout
+		android:id="@+id/contact_grid_relative_layout_avatar"
+		android:layout_width="172dp"
+		android:layout_height="172dp"
+		android:background="@drawable/background_item_grid">
+
+		<ImageView
+			android:id="@+id/contact_grid_thumbnail"
+			android:layout_width="172dp"
+			android:layout_height="172dp"
+			android:layout_centerHorizontal="true"
+			android:layout_margin="5dp"
 			android:background="@null"
-	        android:paddingLeft="2dp"
-	        android:paddingRight="8dp"
-	        android:paddingTop="18dp"
-	        android:layout_alignParentRight="true"/>
-        
-        <TextView
-	        android:id="@+id/contact_grid_name"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentLeft="true"
-	        android:layout_below="@id/contact_grid_relative_layout_avatar"
-	        android:layout_marginLeft="12dp"
-	        android:layout_marginTop="10dp"
-	        android:layout_toLeftOf="@id/contact_grid_three_dots"
-			android:textColor="@color/name_my_account"
-	        android:ellipsize="end"
-			android:textSize="16sp"
-			android:maxLines="1" />
-        
-        <TextView
-	        android:id="@+id/contact_grid_content"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-			android:layout_alignParentLeft="true"
-	        android:layout_marginBottom="12dp"
-	        android:layout_marginLeft="12dp"
-	        android:textColor="@color/mail_my_account"
-	        android:layout_below="@id/contact_grid_name"
-	        android:textSize="12sp" />  
-    </RelativeLayout>       
+			android:scaleType="fitCenter"/>
+
+		<TextView
+			android:id="@+id/contact_grid_initial_letter"
+			android:layout_width="157dp"
+			android:layout_height="140dp"
+			android:gravity="center_horizontal|center_vertical" />
+
+	</RelativeLayout>
+
+	<View
+		android:id="@+id/contact_grid_separator"
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_below="@id/contact_grid_relative_layout_avatar"
+		android:background="@color/new_background_fragment"/>
+
+	<ImageButton
+		android:id="@+id/contact_grid_three_dots"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:src="@drawable/ic_dots_vertical_grey"
+		android:layout_below="@id/contact_grid_separator"
+		android:background="@null"
+		android:paddingLeft="2dp"
+		android:paddingRight="8dp"
+		android:paddingTop="18dp"
+		android:layout_alignParentRight="true"/>
+
+	<TextView
+		android:id="@+id/contact_grid_name"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
+		android:layout_below="@id/contact_grid_separator"
+		android:layout_marginLeft="12dp"
+		android:layout_marginTop="10dp"
+		android:layout_toLeftOf="@id/contact_grid_three_dots"
+		android:textColor="@color/name_my_account"
+		android:ellipsize="end"
+		android:textSize="16sp"
+		android:maxLines="1" />
+
+	<TextView
+		android:id="@+id/contact_grid_content"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
+		android:layout_marginBottom="12dp"
+		android:layout_marginLeft="12dp"
+		android:textColor="@color/mail_my_account"
+		android:layout_below="@id/contact_grid_name"
+		android:textSize="12sp" />
 </RelativeLayout>
